# forensic-vfs-engine

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  clippy.toml  deny.toml  mkdocs.yml  release-plz.toml  renovate.json
.github/workflows/: ci.yml  fuzz.yml
docs/: PRD.md  index.md  privacy.md  terms.md  validation.md
docs/decisions/: 0001-orchestration-detect-and-mount-crate.md  0002-openers-registry-delegating-to-resolver.md  0003-batteries-included-every-reader-compiled-in.md  0004-fleet-registry-deps-naming-and-msrv.md  0005-forbid-unsafe-panic-free-fuzzed.md  0006-clean-unknown-none-vs-loud-bootstrap.md  0007-in-crate-mbr-gpt-and-probe-disambiguation.md  0008-apfs-snapshot-cohort-h-seam.md  0009-fde-layers-as-signature-probers.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_resolve.rs
src/: lib.rs
supply-chain/: config.toml
tests/: apfs_snapshots.rs  locator.rs  open_aff4.rs  open_all_multipartition.rs  open_apfs.rs  open_apm.rs  open_bitlocker.rs  open_btrfs.rs  open_dmg.rs  open_exfat.rs  open_ext4.rs  open_fat.rs  open_filevault.rs  open_gpt.rs  open_hfs.rs  open_iso.rs  open_luks.rs  open_ntfs_e01.rs  open_partitioned.rs  open_qcow2.rs  open_source.rs  open_udf.rs  open_ufs.rs  open_vhd.rs  open_vhdx.rs  open_vmdk.rs  open_xfs.rs  unknown_source.rs  walk.rs
tests/data/: README.md  apm_hfsplus.dmg  empty.vhd  exfat.img  ext4.aff4  fat.img  gpt_ntfs.E01  hfsplus.dmg  ntfs_sample.E01  partitioned_ntfs.E01  test.iso  ufs.img
